--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "motion": "^11.15.0",
     "next": "15.1.3",
     "nodemailer": "^6.9.16",
+    "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.5",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
