--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "@types/nodemailer": "^6.4.17",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
